--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ allprojects {
         jcenter()
         mavenLocal()
         maven { url 'https://maven.google.com'  }
+        mavenCentral()
     }
 }
 
